feat: add devtools integration and consolidate server

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "bun index.ts",
     "build": "bun build index.ts --outdir dist --target bun",
     "build:browser": "bun build src/index.ts --outfile app/sparkle.js --target browser --format esm --minify",
-    "build:watch": "bun build src/index.ts --outfile app/sparkle.js --target browser --format esm --watch",
-    "serve": "bun dev-server.ts",
+    "build:watch": "SPARKLE_WATCH=1 bun serve.ts",
+    "serve": "bun serve.ts",
+    "dev:watch": "SPARKLE_WATCH=1 bun serve.ts",
     "test": "bun test",
     "typecheck": "bunx tsc -p tsconfig.json --noEmit"
   },
